2004-10-05	Amanpreet Singh Alam <amanpreetalam@yahoo.com>

	*configure.in: Punjabi(pa) is add to ALL_LINGUAS

2004-10-04  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/*:
	* src/*:
	* configure.in: Committed big patch which updates GPGME support to 
	current version of the library (1.0). See bugzilla patch for all the 
	specific files touched. (bug# 104205)
	* data/seahorse.schemas.in:
	* src/seahorse-generate-druid.glade:
	* src/seahorse-generate-select.glade: Translation and spelling fixes
	* libseahorse/seahorse-default-key-control.c: Detach signal handlers 
	properly (bug# 140985)
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-preferences.c:
	* src/seahorse-preferences.glade:
	* src/seahorse-preferences.h: Remove unnecessary toolbar configuration 
	options (bug# 140986)
	* src/seahorse-delete.c: Proper stock buttons in prompts (bug# 111840)
	* src/seahorse-generate-select.c: Fix warnings (bug# 111840)
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade: Remove unnecessary view items 
	(bug# 140988)
	 
2004-10-03  Nate Nielsen <nielsen@memberwebs.com>

	* seahorse-generate-druid.glade:
	* seahorse-generate-select.glade: Changed terminology
    from 'druid' to 'assistant'

2004-06-09  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added "sk" (Slovak) to ALL_LINGUAS.

2004-04-24  Bastien Nocera  <hadess@hadess.net>

	* bonobo/seahorse-pgp-file-listener.c: fix a warning,
	gnome_vfs_unescape_string was used without the headers included
	* libseahorse/.cvsignore:
	* libseahorse/seahorse-marshal.c:
	* libseahorse/seahorse-marshal.h: remove auto generated files from
	the CVS

2004-04-24  Bastien Nocera  <hadess@hadess.net>

	* bonobo/seahorse-pgp-file-listener.c: fix a warning,
	gnome_vfs_unescape_string was used without the headers included

2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-25  Gareth Owen  <gowen72@yahoo.com>
