@@ -1,3 +1,8 @@
+2004-10-05  Nate Nielsen <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-context.c: Fixed seahorse_context_get_key which
+	would always return NULL (bug# 154206)
+	
 2004-10-05	Amanpreet Singh Alam <amanpreetalam@yahoo.com>
 
 	*configure.in: Punjabi(pa) is add to ALL_LINGUAS
